[gd_scene load_steps=2 format=4]

[ext_resource type="Script" path="res://KanaLoop/sequence_recall.gd" id="1_0j2sx"]

[node name="SequenceRecall" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0j2sx")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Sequence Recall"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Listen to the sequence and repeat it by selecting the kana in order."
horizontal_alignment = 1

[node name="OptionsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
size_flags_horizontal = 3

[node name="OptionsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OptionsPanel"]
size_flags_horizontal = 3

[node name="DifficultyRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox"]
alignment = 1

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox/DifficultyRow"]
text = "Difficulty"

[node name="DifficultyOption" type="OptionButton" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox/DifficultyRow"]
size_flags_horizontal = 3

[node name="PoolRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox"]
alignment = 1

[node name="PoolLabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox/PoolRow"]
text = "Selection Pool Size"

[node name="PoolSizeSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox/PoolRow"]
min_value = 0.0
max_value = 30.0
step = 1.0
value = 8.0

[node name="RepeatsRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox"]
alignment = 1

[node name="RepeatsLabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox/RepeatsRow"]
text = "Allow Repeats"

[node name="RepeatsCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/OptionsPanel/OptionsVBox/RepeatsRow"]

[node name="PlaybackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = ""
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1
vertical_alignment = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = ""
horizontal_alignment = 1

[node name="FeedbackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = ""
horizontal_alignment = 1

[node name="SelectionPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectionGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/SelectionPanel"]
columns = 6
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
text = "Back to Main Menu"
size_flags_horizontal = 3
